re PR c++/39060 (ICE with lots of invalid member functions)

gcc/cp/

2009-03-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/39060
	* parser.c (cp_parser_late_parsing_default_args): Continue
	the loop when cp_parser_assignment_expression returns
	error_mark_node.

gcc/testsuite/

2009-03-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/39060
	* g++.dg/other/new1.C: Adjusted.
	* g++.dg/parse/crash40.C: Likewise.
	* g++.dg/parse/defarg12.C: Likewise.
	* g++.dg/template/error15.C: Likewise.

	* g++.dg/other/pr39060.C: New.

From-SVN: r144710